--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<header class="fixed top-0 left-0 w-full h-14  bg-[#0094FF] text-white flex items-center justify-between px-6 shadow-md">
+<header class="fixed top-0 left-0 w-full h-14 z-35 bg-[#0094FF] text-white flex items-center justify-between px-6 shadow-md">
     <div class="text-2xl font-extrabold tracking-wider">
         <a href="{% url 'home' %}">
             WORK WAI D
